--- a/package.json
+++ b/package.json
@@ -69,6 +69,9 @@
     "avatar",
     "toastr profile"
   ],
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
